# worksheet-builder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  ab_eval.py  adapt_battery.py  batch.py  batch_utils.py  complete.py  eval_fal_image_models.py  pyproject.toml  render_battery.py  requirements.txt  transform.py  worksheet-builder-consolidated-plan.md
.claude/: worksheet-project-context.md
adapt/: coverage_ledger.py  direct_compiler.py  engine.py  feedback.py  llm_adapt.py  llm_judge.py  llm_orchestrator.py  llm_planner.py  objective_ledger.py  rules.py  schema.py  section_cap.py  workload.py
capture/: preprocess.py  schema.py  store.py
companion/: avatar.py  caregiver.py  catalog.py  character_identity.py  character_judge.py  character_research.py  dosage.py  generate_overlays.py  profile.py  rewards.py  schema.py
corpus/: __init__.py
experiments/: __init__.py  rag_eval.py
extract/: adapter.py  heuristics.py  ocr.py  schema.py  vision.py
plans/: 2026-06-11-image-gen-renderer-plan.md  2026-06-12-gate-protocol-fix-Bprime.md  2026-06-12-judge-threshold-research.md  2026-06-12-next-move-fable5.md  2026-06-12-planner-grader-fix-plan.md  2026-06-12-planner-simplification-plan.md  2026-06-13-coverage-contract-implementation-plan.md  2026-06-13-objective-sufficiency-implementation-plan.md  2026-06-13-objective-sufficiency-rubric-research.md  2026-06-13-planner-coverage-architecture-research.md  2026-06-19-model-architecture-synthesis.md  2026-07-07-intensity-dial-hybrid-renderer-plan.md  add-missing-literacy-activities.md  (+6 more)
(+222 files in other folders)
