[project]
name = "worksheet-builder"
version = "0.1.0"
description = "Skill-preserving ADHD worksheet adaptation engine"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "paddleocr.*",
    "cv2.*",
    "reportlab.*",
    "fitz.*",
    "pytesseract.*",
    "anthropic.*",
    "openai.*",
    "google.*",
    "google.genai.*",
    "chromadb.*",
    "playwright.*",
    "pptx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
